adding config for mvsense parser

--- a/telegraf/telegraf.conf
+++ b/telegraf/telegraf.conf
@@ -5273,7 +5273,7 @@
     "#"
   ]
   qos = 0
-  data_format = "json"
+  data_format = "ciscomvsense"
   tag_keys = ["objects.#.oid"]
   json_string_fields = ["objects.#.frame", "objects.#.type"]
   json_name_key = "objects.#.oid"
