--- a/influxdb/config/influxdb.conf
+++ b/influxdb/config/influxdb.conf
@@ -65,8 +65,8 @@ bind-address = "127.0.0.1:8088"
   log-enabled = true
   suppress-write-log = false
   write-tracing = false
-  flux-enabled = false
-  flux-log-enabled = false
+  flux-enabled = true
+  flux-log-enabled = true
   pprof-enabled = true
   pprof-auth-enabled = false
   debug-pprof-enabled = false
